---- Changes since 1.140 ----
Added an option to create a share's directory when adding the share.
---- Changes since 1.150 ----
Added a page for binding the Samba server to a Windows domain.
---- Changes since 1.160 ----
Added a new options page for configuring Winbind-related settings.
---- Changes since 1.180 ----
Added an option on the user synchronization page for setting the group SID or RID for new users.
---- Changes since 1.200 ----
The smbstatus and smbpasswd programs are now run with an option to specify the Samba configuration file, for sites running multiple Samba instances or using a non-standard config file.
---- Changes since 1.220 ----
When a user is re-named under Samba 3, it is deleted and re-added to the Samba users database, as the pdbedit command does not support renaming.
---- Changes since 1.250 ----
Added an icon for manually editing the Samba configuration file.
---- Changes since 1.260 ----
Added checkboxes and a button to the View Connections page for disconnecting multiple users at once.
---- Changes since 1.270 ----
Added checkboxes and a button for deleting multiple shares at once.
---- Changes since 1.410 ----
Added fields to set the permissions and group ownership of new shared directories.
---- Changes since 1.430 ----
The 'Password never expires' flag can be set for user accounts, thanks to a patch from Juan Miguel Corral.
Allow the server description to be set to explicitly nothing.
---- Changes since 1.500 ----
Show the real Samba version number on the main page.