@@ -23,3 +23,4 @@ The 'Password never expires' flag can be set for user accounts, thanks to a patc
 Allow the server description to be set to explicitly nothing.
 ---- Changes since 1.500 ----
 Show the real Samba version number on the main page.
+Fix list of users for a share to show open files correctly, and not show the same file multiple times on different shares.
